Ahora funciona la interfaz gráfica.

--- a/NoteApp/NoteApp.csproj
+++ b/NoteApp/NoteApp.csproj
@@ -8,7 +8,13 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <PackageReference Include="OpenTK" Version="4.8.2" />
+	<Reference Include="gtk-sharp, Version=2.4.0.0, Culture=neutral, PublicKeyToken=35e10195dab3c99f">
+	  <SpecificVersion>False</SpecificVersion>
+	</Reference>
+    </ItemGroup>
+
+    <ItemGroup>
+      <PackageReference Include="GtkSharp" Version="3.24.24.117-develop" />
     </ItemGroup>
 
 </Project>
