Ahora se viene lo bueno.

--- a/.gitignore
+++ b/.gitignore
@@ -470,4 +470,6 @@ $RECYCLE.BIN/
 # Windows shortcuts
 *.lnk
 
+.idea
+
 # End of https://www.toptal.com/developers/gitignore/api/csharp,windows,linux,macos
